# daisi-project

./: .gitignore  README.md
daisi-cli/: CMakeLists.txt  main.cpp
daisi-cli/src/: DaisiResult.h  DiodeTasksCreator.cpp  DiodeTasksCreator.h  EnergyDistribution.cpp  EnergyDistribution.h  ITasksCreator.cpp  ITasksCreator.h  TasksCreator.h  TriodeTasksCreator.cpp  TriodeTasksCreator.h  config.cpp  config.h  daisi-cli.cpp  validate.cpp  validate.h
gui-client/: CMakeLists.txt  LICENSE.md  README.md
gui-client/cmake/: FindOpenBLAS.cmake
gui-client/src/: AccelFlow.cpp  AccelMainMenu.cpp  AccelResults.cpp  AccelSolverMenu.cpp  BoundariesMenu.cpp  BoundaryConditionsGeneral.cpp  ConductorConditions.cpp  DaisiClient.cpp  DaisiClient.h  DefaultGraphics.cpp  DeviceVisualizationMenues.cpp  Dockerfile  EmitterProperties.cpp  FieldConditions.cpp  FilesBrouses.cpp  FilesBrouses.h  FlagStringsD.h  FlowConditions.cpp  GeneralTools.cpp  GeneralTools.h  GroupBoxWithItems.cpp  GroupBoxWithItems.h  GroupBoxWithTextItems.cpp  GroupBoxWithTextItems.h  ListSelectionMenu.cpp  ListSelectionMenu.h  Menu.cpp  Menu.h  MiddleWidget.cpp  MiddleWidget.h  MyTreeItem.cpp  MyTreeItem.h  ProjectTreeAccelClick.cpp  ShowFlowMenu.cpp  ShowMeshMenu.cpp  ShowProjectTreeAccel.cpp  ShowProjectTreeSim.cpp  ShowProjectTreeSimClick.cpp  ShowResults.cpp  ShowSolverMenu.cpp  (+28 more)
gui-client/trash/: AccelMenues1.cpp  Controller.cpp  Controller.h  CreateNewProjectNucl.cpp  RFQ.cpp  VisualizationFunctions2d.cpp  VisualizationFunctions2d.h  moc_daizy.cpp  regressionProcessor.cpp  regressionProcessorInteractor.cpp  vtkComponent1.h
lib/daisi-solver/: CMakeLists.txt  README.md
lib/daisi-solver/include/daisi-solver/: AccelModelInterface.h  FlagStringsSolver.h  Geom.h  ModelInterface.h  RFQStrings.h  Results.h  SynchrotronStrings.h  VTKIncludeSolver.h  project.h
lib/daisi-solver/lib/boostlog0/include/: boostlog.h
lib/daisi-solver/lib/boostlogconf/: CMakeLists.txt
lib/daisi-solver/lib/boostlogconf/include/: boostlog.h
lib/daisi-solver/lib/boostlogconf/src/: boostlog.cpp
lib/daisi-solver/lib/include/: booslog0_w  boostlog0  boostlogconf  common_tools  common_tools_w  notk
lib/daisi-solver/lib/notk/: .gitignore  CMakeLists.txt  notk_statemachine.xml
lib/daisi-solver/lib/notk/configs/: ball.json
lib/daisi-solver/lib/notk/src/: CMakeLists.txt  controller_p.cpp  solvers.h
lib/daisi-solver/lib/notk/test/: CMakeLists.txt  statemachinetest.cpp  test.cpp
lib/daisi-solver/src/: CMakeLists.txt
lib/daisi-solver/src/accel/DTL/: DTLDevice.cpp  DTLDevice.h  DTLModel.cpp  DTLModel.h  DTLSolver.cpp  DTLSolver.h  DTLStrings.h  DTLTools.cpp
lib/daisi-solver/src/accel/RFQ/: RFQDevice.cpp  RFQDevice.h  RFQModel.cpp  RFQModel.h  RFQSolver.cpp  RFQSolver.h  RFQStrings.cpp  RFQTools.h  RFQToolsNew.cpp
lib/daisi-solver/src/accel/RFQ_old/: LinacTools.cpp  RFQFitnessDynamics.cpp  RFQFitnessDynamicsAcc.cpp  RFQFitnessDynamicsEm.cpp  RFQFitnessDynamicsMatcher.cpp  RFQModelOld.cpp
lib/daisi-solver/src/accel/Synchrotron/: NuclResults.cpp  SynchrotronDevice.cpp  SynchrotronDevice.h  SynchrotronModel.cpp  SynchrotronModel.h  SynchrotronSolver.h  SynchrotronSolverCorr.cpp  SynchrotronSolverEffEst.cpp  SynchrotronSolverGeneral.cpp  SynchrotronSolverOpt.cpp  SynchrotronSolverSim.cpp  SynchrotronStrings.cpp  SynchrotronTools.cpp  SynchrotronTools.h  (+4 more)
lib/daisi-solver/src/common/: Constants.h  Dmath.cpp  Dmath.h  EnergyDistribution.cpp  FlagStringsSolver.cpp  Results.cpp  Tools.cpp  Tools.h  project.cpp
lib/daisi-solver/src/simulations/: BoundaryConditions.cpp  BoundaryConditions.h  BoundaryContainer2d.cpp  BoundaryContainer2d.h  BoundaryContainer3d.cpp  BoundaryContainer3d.h  Cell.h  DataTypes.h  Device.cpp  Device.h  ElectrodeCurrent.cpp  ElectrodeCurrent.h  EmissionCurrentSolver.h  EmissionCurrentSolverBase.cpp  EmissionCurrentSolverPIC.cpp  EmitterDevice2d.cpp  EmitterDevice2d.h  EmitterDevice2daxs.cpp  EmitterDevice2daxs.h  EmitterDevice2daxsVectorized.h  EmitterDevice3d.cpp  EmitterDevice3d.h  EmitterDeviceBase.cpp  EmitterDeviceBase.h  EmitterDeviceInterface.h  FlagStringsD.h  Geom.cpp  GridData.cpp  GridData.h  GridData2d.cpp  GridData2daxs.cpp  GridData2dpolar.cpp  GridData3d.cpp  MagneticFieldSolver.cpp  MagneticFieldSolver.h  MeshContainer2d.cpp  MeshContainer2d.h  MeshContainer3d.cpp  MeshContainer3d.h  MeshGenerator.h  (+48 more)
lib/daisi-solver/src/trash/: BoundaryConditionsGPU.h  BoundaryContainer2dGPU.cpp  BoundaryContainer2dGPU.h  BoundaryContainer2dpolar.cpp  BoundaryContainer2dpolar.h  DeviceGPU.h  EmissionCurrentSolver2dBase.cpp  EmissionCurrentSolverPTI.cpp  EmitterDevice2dGPU.h  EmitterDevice2daxsGPU.h  EmitterDevice2daxsVectorized.cpp  EmitterDeviceBaseGPU.h  GPUTypes.h  GeomGPU.h  GridDataGPU.h  InCellFunc.cpp  ParticleGPU.cpp  ParticleGPU.h  ParticleGridInterface1d.h  ParticleGridInterface2d.cpp  ParticleGridInterface2d.h  ParticleGridInterface2dGPU.h  ParticleGridInterface2daxs.h  ParticleShape2d.h  ParticleSourceGPU.h  ParticlesFlowGPU.h  PoissonSolver3d.cpp  PoissonSolver3d.h  SolverPTI.cpp  SolverPTIold.cpp  WcalculateVector.cpp
lib/daisi-solver/test_app/: CMakeLists.txt  main.cpp
lib/notk/src/: CMakeLists.txt  config.h  controller.cpp  controller_p.cpp  controller_p.h  enums.h  states_events.h
lib/notk/src/base/: iconfig.cpp  iconfig.h  ioptistep.cpp
lib/notk/src/tools/: tools_notk.cpp
lib/notk/test/: CMakeLists.txt  opttests_gauss_fit.cpp  rastrigin_test.cpp  statemachinetest.cpp  test.cpp
lib/notk2/: CMakeLists.txt  README.md
lib/notk2/configs/: gauss.json  swarm.json  swarm_ball.json
lib/notk2/include/notk/: notkbuilder.hpp  testfunctions.hpp
lib/notk2/lib/boostlog0/: README.md
lib/notk2/lib/common_tools/: CMakeLists.txt  README.md
lib/notk2/lib/serreflection/: .gitignore  .gitmodules
lib/notk2/src/: config.h  controller.cpp  controller_p.h  notkbuilder.cpp  optresult.cpp  testfunctions.cpp
lib/notk2/src/base/: iconfig.cpp  iconfig.h  ioptistep.cpp
lib/notk2/src/tools/: tools.h
lib/notk2/test/: rastrigin_test.cpp  test.cpp
lib/notk2/test/boostlogconf/: .gitmodules  README.md
(+177 files in other folders)
